ATUALIZACAO PARA GERACAO DE HASH
